--- a/dsmovie/frontend/public/index.html
+++ b/dsmovie/frontend/public/index.html
@@ -16,7 +16,7 @@
     <title>DSMovie</title>
   </head>
   <body>
-    <noscript>Voce precisa habilitar JavaScript para este app.</noscript>
+    <noscript>Você precisa habilitar JavaScript para este app.</noscript>
     <div id="root"></div>
     
   </body>
